// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when the column is sortable and a custom sortIcon is passed 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
  min-width: 100px;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 500;
  white-space: nowrap;
  color: rgba(0,0,0,.54);
  min-height: 48px;
  cursor: pointer;
}

.c0:first-child {
  padding-left: calc(48px / 2);
}

.c0:last-child {
  padding-right: calc(48px / 2);
}

.c0::before {
  margin-bottom: 1px;
  font-size: 12px;
  padding-right: 4px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 800;
}

.c2 {
  line-height: 1;
}

.c2 i,
.c2 svg {
  font-size: 18px !important;
  height: 18px !important;
  width: 18px !important;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c2.asc i,
.c2.asc svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<div
  class="rdt_TableCol c0"
  id="column-name"
>
  <div
    class="c1"
  >
    <span
      class="asc c2"
    >
      <div>
        up
      </div>
    </span>
    test
  </div>
</div>
`;

exports[`should render correctly when the column is sortable and the sort is asc 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
  min-width: 100px;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 500;
  white-space: nowrap;
  color: rgba(0,0,0,.54);
  min-height: 48px;
  cursor: pointer;
}

.c0:first-child {
  padding-left: calc(48px / 2);
}

.c0:last-child {
  padding-right: calc(48px / 2);
}

.c0::before {
  margin-bottom: 1px;
  font-size: 12px;
  padding-right: 4px;
}

.c0::before {
  content: '\\25B2';
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 800;
}

<div
  class="rdt_TableCol c0"
  id="column-name"
>
  <div
    class="c1"
  >
    test
  </div>
</div>
`;

exports[`should render correctly when the column is sortable and the sort is desc 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
  min-width: 100px;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 500;
  white-space: nowrap;
  color: rgba(0,0,0,.54);
  min-height: 48px;
  cursor: pointer;
}

.c0:first-child {
  padding-left: calc(48px / 2);
}

.c0:last-child {
  padding-right: calc(48px / 2);
}

.c0::before {
  margin-bottom: 1px;
  font-size: 12px;
  padding-right: 4px;
}

.c0::before {
  content: '\\25BC';
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 800;
}

<div
  class="rdt_TableCol c0"
  id="column-name"
>
  <div
    class="c1"
  >
    test
  </div>
</div>
`;

exports[`should render correctly with default props 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
  min-width: 100px;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 500;
  white-space: nowrap;
  color: rgba(0,0,0,.54);
  min-height: 48px;
}

.c0:first-child {
  padding-left: calc(48px / 2);
}

.c0:last-child {
  padding-right: calc(48px / 2);
}

.c0::before {
  margin-bottom: 1px;
  font-size: 12px;
  padding-right: 4px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="rdt_TableCol c0"
  id="column-name"
>
  <div
    class="c1"
  >
    test
  </div>
</div>
`;
